@@ -69,13 +69,20 @@
 		<Product type="0003" id="004e" name="Heavy Duty Smart Switch Gen5" config="aeotec/hdss_gen5.xml" />
 		<Product type="0004" id="0025" name="Z-Wave Repeater"/>
 		<Product type="0004" id="0050" name="DSD31 Siren Gen5" config="aeotec/dsd31.xml"/>
-        <!-- US-market products start with type prefix "01" -->
+        	<!-- US-market products start with type prefix "01" -->
 		<Product type="0101" id="005a" name="Z-Stick Gen5"/>
 		<Product type="0102" id="0059" name="Recessed Door Sensor Gen5" config="aeotec/recessed_doorsensor_gen5.xml"/>
-        <!-- AU-market products start with type prefix "02" -->
+	        <!-- AU-market products start with type prefix "02" -->
 		<Product type="0202" id="0059" name="Recessed Door Sensor Gen5" config="aeotec/recessed_doorsensor_gen5.xml"/>
-		
-
+		<Product type="0003" id="0060" name="Smart Switch 6" config="aeotec/ss6.xml" />
+		<Product type="0103" id="0060" name="Smart Switch 6" config="aeotec/ss6.xml" />
+		<Product type="0203" id="0060" name="Smart Switch 6" config="aeotec/ss6.xml" />
+		<Product type="0002" id="0064" name="MultiSensor 6" config="aeotec/multisensor6.xml" />
+		<Product type="0102" id="0064" name="MultiSensor 6" config="aeotec/multisensor6.xml" />
+		<Product type="0202" id="0064" name="MultiSensor 6" config="aeotec/multisensor6.xml" />
+		<Product type="0003" id="0062" name="LED Bulb" config="aeotec/ledbulb.xml" />
+		<Product type="0103" id="0062" name="LED Bulb" config="aeotec/ledbulb.xml" />
+		<Product type="0203" id="0062" name="LED Bulb" config="aeotec/ledbulb.xml" />
 	</Manufacturer>
         <Manufacturer id="0111" name="Airline Mechanical">
                 <Product type="8200" id="0200" name="ZDS-100"/>
