@@ -174,6 +174,7 @@ Version 1.3
  - If we recieve a cleartext message for a Secured CommandClass, drop the
    message (Configurable - Set EnforceSecureReception to false in
    options.xml) (Justin)
+ - Add Aeotec LED Bulb, MultiSensor 6 and SmartSwitch 6 Configs (Justin)
 
 Version 1.2 
  - Released on 15/10/14
